# Uebung02

01_Sequence/: DNA.h  Sequence.h
01_Sequence/test/: 2Bit_test.cpp  CMakeLists.txt  DNA_test.cpp  Fasta_test.cpp
Uebung02/: Assembler.h  CMakeLists.txt  Graph.h
Uebung02/01_Sequence/: CMakeLists.txt  RNA.h
Uebung02/01_Sequence/test/: 2Bit_test.cpp  DNA_test.cpp  Fasta_test.cpp  RNA_test.cpp  Sequence_test.cpp  main_test.cpp
Uebung02/test/: CMakeLists.txt  Graph_test.cpp  RNA_test.cpp  Sequence_test.cpp
